Adicionando meu código ao repositorio

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ version_provider = "poetry"
 python = ">=3.11,<3.13"
 pydantic = "^2.8.2"
 pydantic-settings = "^2.4.0"
+indeterminatebeam = "^2.3.0"
+sympy = "^1.13.3"
+matplotlib = "^3.10.1"
+numpy = "^2.2.4"
 
 [tool.poetry.group.test.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
 commitizen = ">=3.21.3"
